Set up new sdk